<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="image_des">image</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="click_to_signup">Click TO SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="google">Google</string>
    <string name="facebook">facebook</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>