<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E6000000"
    tools:context=".sign_in">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/whatsapp"
            android:contentDescription="@string/image_des" />

        <EditText
            android:id="@+id/email_signin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:drawableStart="@drawable/ic_outline_email_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/enter_the_email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/password_signin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:drawableStart="@drawable/ic_outline_password_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/enter_the_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_signin"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/signup_txt"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:gravity="right"
            android:text="@string/click_to_signup"
            android:textColor="#00796B"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:backgroundTint="#009259"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            app:cornerRadius="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/google_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_google"
                android:drawablePadding="15dp"
                android:padding="15dp"
                android:text="@string/google"
                android:textColor="#000000"
                android:textStyle="bold"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/facebook_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:backgroundTint="#4267B2"
                android:drawableLeft="@drawable/ic_facebook"
                android:padding="15dp"
                android:text="@string/facebook"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:cornerRadius="15dp" />
        </LinearLayout>


    </LinearLayout>


    </LinearLayout>


